syntax = "proto3";

package domain;

option go_package = "./domain";

message Shape {
  string raw_shape = 1;
  int64 width = 2;
  int64 height = 3;
}
